--- a/flash_download_tools_v3.6.7/configure/esp8266/spi_download.conf
+++ b/flash_download_tools_v3.6.7/configure/esp8266/spi_download.conf
@@ -76,7 +76,31 @@ flashsize = 5
 
 [DOWNLOAD]
 autostart1 = 0
-com_port1 = 
-baudrate1 = 0
+com_port1 = COM4
+baudrate1 = 5
 checkmac1 = 1
+erase_flash_en = True
+new_status = 0
+num_bytes = 0
+non_volatile = False
+
+[MAC SAVE]
+mac_save_enable = False
+
+[ESPTOOL_PARAM]
+after = hard_reset
+baud = 115200
+before = default_reset
+chip = auto
+compress = 0
+flash_freq = keep
+flash_mode = keep
+flash_size = keep
+no_compress = False
+no_progress = False
+no_stub = False
+operation = write_flash
+port = /dev/cu.SLAB_USBtoUART
+spi_connection = 0
+verify = False
 
